--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>httpcore</artifactId>
             <version>4.4.14</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20210307</version> <!-- or the latest version available -->
+        </dependency>
     </dependencies>
 
     <properties>
